*SVN*

* Add inheritance support for virtual enumerations

* Add support for converting unsafe identifier names (like "red!") to their safe symbol equivalent ("red")

* Add ability to use truth accessors for determing the identifier name

* Add support for virtual enumerations that don't need to be backed by the database

*0.0.2* (September 26th, 2007)

* Move test fixtures out of the test application root directory

* Convert dos newlines to unix newlines

*0.0.1* (August 4th, 2007)

* Initial public release

* Add/refactor unit tests

* Add documentation